# StrongDMM

./: .editorconfig  .gitignore  .golangci.yml  .travis.yml  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  README.md  Taskfile.yml  Taskfile_windows.yml  assets.go  build.gradle  go.mod  go.sum  main.go  settings.gradle  versioninfo.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-build.yml  ci.yml  gradle-command.yml
app/: action.go  action_common.go  action_dm.go  action_ui_environment.go  action_ui_menu.go  action_user.go  app.go  flow_environment.go  flow_map.go  project.go
app/command/: command.go  storage.go
app/render/: bucket.go  camera.go  render.go
app/ui/: layout.go  menu.go
app/window/: window.go
assets/: assets.go
assets/internal/: placeholder.dmi
buildSrc/: build.gradle
cmd/strongdmm/: main.go
docs/: CONTRIBUTING.md  README.md  index.md  manifest.json
gradle/wrapper/: gradle-wrapper.properties
internal/app/: about.go  action.go  action_common.go  action_dm.go  action_ui_menu.go  action_ui_panel_environment.go  action_user.go  app.go  config.go  config_app.go  config_preference.go  config_project.go  environment.go  flow_environment.go  flow_map.go  logs.go  project.go  update.go  window.go
internal/env/: env.go
internal/imguiext/: imguiext.go
internal/platform/: gl.go  glfw.go  shader.go
internal/req/: req.go
internal/rsc/: font.go  png.go  rsc.go
internal/util/: util.go
libs/: README.txt  sdmmparser  sdmmparser_source
libs-win/: README.txt
pkg/imguiext/: colors.go  imguiext.go
pkg/platform/: gl.go  texture.go
pkg/util/: imgui.go  types.go  util.go
pkg/widget/: image.go  input_text_multiline.go  window.go
src/: CHANGELOG.md  go.mod  go.sum  main.go  main_rsc.go  versioninfo.json
src/app/: about.go  action.go  action_user.go  (+14 more)
src/sdmmlauncher/: Cargo.toml  build.rs
src/sdmmlauncher/res/: logo.txt
src/sdmmlauncher/src/: archive.rs  download.rs  main.rs
src/sdmmparser/: Cargo.toml  main.rs
src/sdmmparser/src/: main.rs
(+1470 files in other folders)
