[package]
name = "sdmmlauncher"
version = "1.0.0"

[[bin]]
name = "sdmmlauncher"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
dirs = "2.0.2"
indicatif = "0.14.0"
tempfile = "3.1.0"
zip = "0.5"

[target.'cfg(linux)'.dependencies]
openssl = { version = "0.10.4", features = ["vendored"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
