[package]
name = "sdmmparser"
version = "1.0.0"

[[bin]]
name = "sdmmparser"
path = "src/main.rs"

[dependencies]
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"

[dependencies.dreammaker]
git = "https://github.com/SpaiR/SpacemanDMM"
rev = "ac037752c930030a46f4ddcb7e39b199246d19d1"
package = "dreammaker"

[profile.release]
lto = true
