[package]
name = "sdmmparser"
version = "1.0.0"

[[bin]]
name = "sdmmparser"
path = "src/main.rs"

[dependencies]
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"

[dependencies.dreammaker]
git = "https://github.com/SpaiR/SpacemanDMM"
rev = "b069b57cb0311d86d55487f528325383694e0402"
package = "dreammaker"

[profile.release]
lto = true
